name:                llvm-hs183
version:             0.1.0.0
author:              Chaitanya Koparkar
maintainer:          ckoparkar@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable llvm-hs183
  main-is:             Main.hs
  build-depends:       base          >=4.10      && < 4.11
                     , llvm-hs-pure  >= 6.0.0    && < 7.0
                     , llvm-hs       >= 6.0.0    && < 7.0
                     , bytestring    >= 0.9.1.10 && < 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
